--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="2000sp"
     android:fitsSystemWindows="true"
@@ -10,17 +11,47 @@
     <ImageView
         android:id="@+id/splashImageView"
         android:src="@drawable/logo"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="60sp"
         android:layout_centerHorizontal="true"
         android:layout_width="160sp"
         android:layout_height="140sp"/>
+
+    <com.dd.CircularProgressButton
+        android:id="@+id/loginButton"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="226dp"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:cpb_cornerRadius="8dp"
+        app:cpb_textComplete="Complete"
+        app:cpb_textError="Error"
+        app:cpb_textIdle="Login"
+        android:layout_below="@+id/splashImageView"
+        android:layout_centerHorizontal="true"
+        app:cpb_selectorIdle="@drawable/login_button"/>
+
+    <com.dd.CircularProgressButton
+        android:id="@+id/registerButton"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:cpb_cornerRadius="8dp"
+        app:cpb_textComplete="Complete"
+        app:cpb_textError="Error"
+        app:cpb_textIdle="Register"
+        android:layout_below="@+id/loginButton"
+        android:layout_centerHorizontal="true"
+        app:cpb_selectorIdle="@drawable/login_button"/>
 
     <View android:background="@color/colorAccent"
         android:layout_width = "175sp"
         android:layout_centerHorizontal="true"
         android:layout_height="2dp"
         android:layout_below="@+id/splashImageView"
-        android:layout_marginTop="200sp"/>
+        android:layout_marginTop="165sp"/>
 
     <it.chengdazhi.decentbanner.DecentBanner
         android:id="@+id/decentBanner"
