--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,33 @@
     <ImageView
         android:id="@+id/textLogoImageView"
         android:layout_width="160sp"
-        android:layout_height="140sp"
+        android:layout_height="60sp"
+        android:layout_marginTop="50sp"
         android:src="@drawable/logo_name_trans"
         android:layout_centerHorizontal="true"/>
-    
+
+    <EditText
+        android:id="@+id/userNameEditText"
+        android:layout_width="250sp"
+        android:layout_height="wrap_content"
+        android:hint="User Name"
+        android:ems="10"
+        android:layout_marginTop="10sp"
+        android:layout_below="@+id/textLogoImageView"
+        android:layout_centerHorizontal="true"
+        android:maxLines="1" />
+
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="250sp"
+        android:layout_height="wrap_content"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_marginTop="10sp"
+        android:layout_below="@+id/userNameEditText"
+        android:layout_centerHorizontal="true"
+        android:maxLines="1" />
+
+
 </RelativeLayout>
