--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimary">
 
     <ImageView
@@ -21,7 +20,7 @@
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/passwordLinearLayout"
         android:orientation="horizontal"
-        android:layout_marginTop="15sp">
+        android:layout_marginTop="30sp">
 
         <ImageView
             android:layout_width="20sp"
@@ -33,7 +32,7 @@
 
         <EditText
             android:id="@+id/userNameEditText"
-            android:layout_width="200sp"
+            android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:hint="User Name"
             android:textColor="#ffebee"
@@ -66,7 +65,7 @@
 
         <EditText
             android:id="@+id/passwordEditText"
-            android:layout_width="200sp"
+            android:layout_width="250sp"
             android:layout_height="wrap_content"
             android:hint="Password"
             android:textColor="#ffebee"
@@ -81,89 +80,50 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/rememberMeLinearLayout"
+        android:id="@+id/emailLinearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/passwordLinearLayout"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
-        android:layout_marginTop="10sp"
-        android:layout_below="@id/passwordLinearLayout"
-        >
-        <android.support.v7.widget.AppCompatCheckBox
-            android:layout_width="wrap_content"
+        android:layout_marginTop="10sp">
+
+        <ImageView
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:src="@drawable/email_register"
+            android:tint="@color/cpb_white"
+            android:layout_marginRight="5sp"
+            android:layout_marginTop="5sp"/>
+
+        <EditText
+            android:id="@+id/emailEditText"
+            android:layout_width="250sp"
             android:layout_height="wrap_content"
-            android:text="Remember Me"
+            android:hint="Email"
+            android:textColor="#ffebee"
+            android:textColorHint="#ffebee"
+            android:ems="10"
+            android:maxLines="1"
             android:textSize="15sp"
-            android:width="200sp"
-            android:layout_marginRight="35sp"
-            android:textColor="@color/white"
-            />
+            android:lines="1"
+            android:singleLine="true" />
 
     </LinearLayout>
 
     <com.dd.CircularProgressButton
-        android:id="@+id/loginButton"
+        android:id="@+id/registerButton"
         android:layout_width="210dp"
         android:layout_height="40dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="30dp"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:cpb_cornerRadius="8dp"
         app:cpb_textComplete="Complete"
         app:cpb_textError="Error"
-        app:cpb_textIdle="Login"
-        android:layout_below="@+id/rememberMeLinearLayout"
+        app:cpb_textIdle="Register"
+        android:layout_below="@+id/emailLinearLayout"
         android:layout_centerHorizontal="true"
         app:cpb_selectorIdle="@drawable/login_button"/>
-
-    <TextView
-        android:id="@+id/forgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forget password?"
-        android:textColor="@color/white"
-        android:layout_below="@+id/loginButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15sp"
-        android:textSize="15dp"/>
-
-    <LinearLayout
-        android:id="@+id/socialNetworkLoginLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/forgotPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="50sp"
-            android:layout_marginTop="50sp"
-            android:layout_height="50sp"
-            android:src="@drawable/googleplus_logo"
-            android:layout_marginRight="25sp"
-            />
-
-        <TextView
-            android:id="@+id/socialNetworkLoginText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="or"
-            android:textColor="@color/white"
-            android:textSize="15dp"
-            />
-
-        <ImageView
-            android:layout_width="50sp"
-            android:layout_marginTop="50sp"
-            android:layout_height="50sp"
-            android:src="@drawable/facebook_logo"
-            android:layout_marginLeft="25sp"
-            />
-
-
-    </LinearLayout>
-
 
 </RelativeLayout>
