--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="black_overlay">#333333</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#00000000</color>
+    <color name="inactive">#dddddd</color>
 </resources>
