--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,9 +39,7 @@
             android:textColorHint="#ffebee"
             android:ems="10"
             android:maxLines="1"
-            android:textSize="15sp"
-            android:lines="1"
-            android:singleLine="true" />
+            android:textSize="15sp"/>
 
     </LinearLayout>
 
@@ -74,8 +72,7 @@
             android:ems="10"
             android:maxLines="1"
             android:textSize="15sp"
-            android:lines="1"
-            android:singleLine="true" />
+            />
 
     </LinearLayout>
 
