--- a/app/src/main/res/layout/layout_list_feed.xml
+++ b/app/src/main/res/layout/layout_list_feed.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,23 +9,28 @@
     <LinearLayout
         android:id="@+id/postInfoLayout"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="wrap_content"
+        android:minHeight="75dp"
         android:layout_centerVertical="true"
         android:orientation="horizontal">
 
 
         <ImageView
             android:id="@+id/imagePostStarter"
-            android:layout_width="5sp"
-            android:layout_height="5sp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginTop="25sp"
             android:src="@drawable/user_login_24"
             />
 
         <TextView
             android:id="@+id/titlePost"
-            android:layout_width="15sp"
-            android:layout_height="10sp"
-            android:text="ini judul!"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginLeft="30sp"
+            android:textSize="17sp"
             />
         <TextView
             android:id="@+id/postStarter"
@@ -40,7 +47,7 @@
     <LinearLayout
         android:id="@+id/postContentLayout"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:orientation="vertical"
@@ -49,33 +56,101 @@
         <ImageView
             android:id="@+id/postImage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"/>
 
         <TextView
             android:id="@+id/postContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="30sp"
+            android:layout_marginRight="30sp"
             android:maxLines="2"/>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/postBottom"
         android:layout_width="match_parent"
-        android:layout_height="50sp"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginTop="30sp"
+        android:layout_marginBottom="20sp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/postDetail"
-            android:layout_width="10sp"
+            android:layout_marginLeft="30sp"
+            android:layout_width="70dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="25sp"
             android:text="DETAILS"
             />
 
-        <TextView
-            android:id="@+id/postResult"
-            android:layout_width="10sp"
-            android:layout_height="match_parent"
-            android:text="HOAX"/>
+        <LinearLayout
+            android:id="@+id/resultLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="15sp"
+            android:layout_marginTop="15sp">
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="RESULT"/>
+
+            <TextView
+                android:id="@+id/postResult"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:text="HOAX"
+                android:textAlignment="center"
+                android:textColor="@color/cpb_red"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/voteLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20sp">
+
+            <com.dd.CircularProgressButton
+                android:id="@+id/upVoteButton"
+                android:layout_width="57dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:cpb_cornerRadius="30dp"
+                app:cpb_textComplete="Complete"
+                app:cpb_textError="Error"
+                app:cpb_textIdle="2"
+                android:layout_centerHorizontal="true"
+                app:cpb_selectorIdle="@color/colorAccent"
+                android:layout_marginLeft="10sp"
+                android:drawableTop="@drawable/up_logo"
+                android:drawableTint="@color/white" />
+
+            <com.dd.CircularProgressButton
+                android:id="@+id/downVoteButton"
+                android:layout_width="57dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:cpb_cornerRadius="30dp"
+                app:cpb_textComplete="Complete"
+                app:cpb_textError="Error"
+                app:cpb_textIdle="23"
+                android:layout_centerHorizontal="true"
+                app:cpb_selectorIdle="@color/black_overlay"
+                android:layout_marginLeft="20sp"
+                android:drawableTop="@drawable/down_logo"
+                android:drawableTint="@color/colorPrimary"/>
+        </LinearLayout>
+
 
     </LinearLayout>
 
