--- a/app/src/main/res/xml/bottom_navbar.xml
+++ b/app/src/main/res/xml/bottom_navbar.xml
@@ -16,6 +16,10 @@
         />
 
     <tab
+
+        />
+
+    <tab
         id="@+id/notification"
         inActiveColor="@color/inactive"
         activeColor="@color/colorAccent"
