--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/activity_main_layout"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".LandingPageActivity"
+    android:clipChildren="false"
     android:background="@color/white">
 
     <android.support.v4.view.ViewPager
@@ -24,5 +26,14 @@
         app:bb_tabXmlResource="@xml/bottom_navbar"
         android:background="@color/colorPrimary"
         />
+
+
+    <ImageView
+        android:id="@+id/newPost"
+        android:layout_width="100sp"
+        android:layout_height="100sp"
+        android:src="@drawable/logo"
+        android:layout_alignBottom="@+id/bottomBar"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
