--- a/app/src/main/res/layout/layout_list_feed.xml
+++ b/app/src/main/res/layout/layout_list_feed.xml
@@ -24,24 +24,43 @@
             android:src="@drawable/user_login_24"
             />
 
-        <TextView
-            android:id="@+id/titlePost"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_marginLeft="30sp"
-            android:textSize="17sp"
-            />
-        <TextView
-            android:id="@+id/postStarter"
-            android:layout_width="7sp"
-            android:layout_height="10sp"
-            />
-        <TextView
-            android:id="@+id/datePosted"
-            android:layout_width="7sp"
-            android:layout_height="10sp"
-            />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/titlePost"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp"
+                android:layout_marginLeft="30sp"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:textColor="@color/black_overlay"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="30sp"
+                    android:text="by "
+                    />
+                <TextView
+                    android:id="@+id/postStarter"
+                    android:layout_width="75dp"
+                    android:layout_height="30dp"
+                    android:textColor="@color/cpb_red"
+                    />
+                <TextView
+                    android:id="@+id/datePosted"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
