on going to finish new post

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -39,7 +39,9 @@
             android:textColorHint="#ffebee"
             android:ems="10"
             android:maxLines="1"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:lines="1"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
