nyelesein ask activity, nambahin form register, lagi ngerjain profile activity dan edit account activity

--- a/app/src/main/res/layout/activity_new_post_result.xml
+++ b/app/src/main/res/layout/activity_new_post_result.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="10sp"
         android:layout_marginRight="10sp"
         android:layout_marginBottom="20sp"
+        android:paddingBottom="25sp"
         android:layout_centerHorizontal="true"
         >
 
@@ -65,12 +66,13 @@
                 android:layout_marginLeft="10sp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="185dp"
                     android:layout_height="wrap_content"
                     android:text="Machine Learning Result"
                     android:textSize="15dp"
                     android:textColor="@color/colorPrimary"/>
                 <TextView
+                    android:id="@+id/newPostMLResultValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="53"
@@ -86,8 +88,9 @@
                     android:textColor="@color/colorPrimary"/>
             </LinearLayout>
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                android:id="@+id/newPostMLResultBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="15dp"
                 app:rcProgress="53"
                 app:rcMax="100"
                 app:rcRadius="10sp"
@@ -95,6 +98,132 @@
                 app:rcProgressColor="@color/colorPrimary">
 
             </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="20sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Governemnt Clarification Result"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"/>
+                <TextView
+                    android:id="@+id/newPostGovResultValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textAlignment="viewEnd"
+                    android:layout_marginLeft="80dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/1"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"/>
+            </LinearLayout>
+            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                android:id="@+id/newPostGovResultBar"
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                app:rcProgress="0"
+                app:rcMax="1"
+                app:rcRadius="10sp"
+                app:rcBackgroundColor="@color/colorAccent"
+                app:rcProgressColor="@color/colorPrimary">
+
+            </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="20sp">
+
+                <TextView
+                    android:layout_width="185dp"
+                    android:layout_height="wrap_content"
+                    android:text="Public Opinion Result"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"/>
+                <TextView
+                    android:id="@+id/newPostPOResultValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="85"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:textAlignment="viewEnd"
+                    android:layout_marginLeft="80dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/100"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"/>
+            </LinearLayout>
+            <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+                android:id="@+id/newPostPOResultBar"
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                app:rcProgress="85"
+                app:rcMax="100"
+                app:rcRadius="10sp"
+                app:rcBackgroundColor="@color/colorAccent"
+                app:rcProgressColor="@color/colorPrimary">
+
+            </com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/newPostResultBarLayout"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="40dp"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+            <com.dd.CircularProgressButton
+                android:id="@+id/feedButton"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:cpb_cornerRadius="8dp"
+                app:cpb_textComplete="Complete"
+                app:cpb_textError="Error"
+                app:cpb_textIdle="Feed"
+                android:layout_alignRight="@+id/dummyTextView"
+                app:cpb_selectorIdle="@drawable/login_button"
+                android:drawableLeft="@drawable/home_white_logo"/>
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="match_parent">
+
+            </LinearLayout>
+            <com.dd.CircularProgressButton
+                android:id="@+id/sharedButton"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                app:cpb_cornerRadius="8dp"
+                app:cpb_textComplete="Complete"
+                app:cpb_textError="Error"
+                app:cpb_textIdle="Share"
+                app:cpb_selectorIdle="@drawable/login_button"
+                android:drawableLeft="@drawable/share_white_logo"/>
         </LinearLayout>
     </RelativeLayout>
 </RelativeLayout>
