--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -39,9 +39,7 @@
             android:textColorHint="#ffebee"
             android:ems="10"
             android:maxLines="1"
-            android:textSize="15sp"
-            android:lines="1"
-            android:singleLine="true"/>
+            android:textSize="15sp"/>
 
     </LinearLayout>
 
@@ -110,6 +108,72 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/firstNameLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/emailLinearLayout"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_marginTop="10sp">
+
+        <ImageView
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:src="@drawable/first_name_logo"
+            android:tint="@color/cpb_white"
+            android:layout_marginRight="5sp"
+            android:layout_marginTop="5sp"/>
+
+        <EditText
+            android:id="@+id/firstNameEditText"
+            android:layout_width="250sp"
+            android:layout_height="wrap_content"
+            android:hint="First Name"
+            android:textColor="#ffebee"
+            android:textColorHint="#ffebee"
+            android:ems="10"
+            android:maxLines="1"
+            android:textSize="15sp"
+            android:lines="1"
+            android:singleLine="true" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/lastNameLinearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/firstNameLinearLayout"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:layout_marginTop="10sp">
+
+        <ImageView
+            android:layout_width="20sp"
+            android:layout_height="20sp"
+            android:src="@drawable/last_name_logo"
+            android:tint="@color/cpb_white"
+            android:layout_marginRight="5sp"
+            android:layout_marginTop="5sp"/>
+
+        <EditText
+            android:id="@+id/lastNameEditText"
+            android:layout_width="250sp"
+            android:layout_height="wrap_content"
+            android:hint="Last Name"
+            android:textColor="#ffebee"
+            android:textColorHint="#ffebee"
+            android:ems="10"
+            android:maxLines="1"
+            android:textSize="15sp"
+            android:lines="1"
+            android:singleLine="true" />
+
+    </LinearLayout>
+
+
     <com.dd.CircularProgressButton
         android:id="@+id/registerButton"
         android:layout_width="210dp"
@@ -121,7 +185,7 @@
         app:cpb_textComplete="Complete"
         app:cpb_textError="Error"
         app:cpb_textIdle="Register"
-        android:layout_below="@+id/emailLinearLayout"
+        android:layout_below="@+id/lastNameLinearLayout"
         android:layout_centerHorizontal="true"
         app:cpb_selectorIdle="@drawable/login_button"/>
 
