--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="id.asdos.asdosapp.mainMenu.MainActivity">
+    <item
+        android:id="@+id/menu_account_setting"
+        android:title="Account Setting"
+        android:orderInCategory="1"
+        android:showAsAction="never"
+        />
     <item android:id="@+id/menu_logout"
         android:title="Log Out"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         app:showAsAction="never" />
 </menu>
