--- a/app/src/main/res/menu/menu_new_post.xml
+++ b/app/src/main/res/menu/menu_new_post.xml
@@ -3,14 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="id.asdos.asdosapp.mainMenu.MainActivity">
-    <item
-        android:id="@+id/menu_account_setting"
-        android:title="Account Setting"
+
+    <item android:id="@+id/menu_submit"
+        android:title="Submit"
         android:orderInCategory="1"
-        android:showAsAction="never"
+        android:icon="@drawable/check_logo"
+        app:showAsAction="always"
         />
-    <item android:id="@+id/menu_logout"
-        android:title="Log Out"
-        android:orderInCategory="2"
-        app:showAsAction="never" />
 </menu>
