finish post detail mvp

--- a/app/src/main/res/layout/activity_post_detail_view.xml
+++ b/app/src/main/res/layout/activity_post_detail_view.xml
@@ -97,15 +97,6 @@
         android:layout_marginBottom="20sp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/postDetail"
-            android:layout_marginLeft="30sp"
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="25sp"
-            android:text="DETAILS"
-            />
-
         <LinearLayout
             android:id="@+id/resultLayout"
             android:layout_width="wrap_content"
@@ -134,7 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginLeft="20sp">
+            android:layout_marginLeft="130sp">
 
             <com.dd.CircularProgressButton
                 android:id="@+id/upVoteButton"
@@ -170,4 +161,26 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/commentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20sp"
+            android:text="comments"/>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/commentRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
