--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:paddingLeft="30sp"
     android:orientation="vertical">
 
     <ScrollView
@@ -18,11 +17,12 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerHorizontal="true"
-                />
+                android:src="@drawable/default_profpic"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:paddingLeft="30sp"
                 android:layout_below="@+id/changeProfilePicture">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -164,7 +164,7 @@
                 <com.dd.CircularProgressButton
                     android:id="@+id/saveChangesButton"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="40dp"
                     android:layout_marginTop="30dp"
                     android:textColor="@color/white"
                     android:textSize="12sp"
@@ -173,7 +173,7 @@
                     app:cpb_textError="Error"
                     app:cpb_textIdle="Save"
                     app:cpb_selectorIdle="@drawable/login_button"
-                    android:layout_marginLeft="100dp"/>
+                    android:layout_marginLeft="110dp"/>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
