--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -12,52 +14,81 @@
 
         <ImageView
             android:id="@+id/profilePicture"
+            android:paddingTop="12sp"
             android:layout_weight="2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:src="@drawable/default_profpic"/>
 
         <LinearLayout
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="100sp">
+            android:layout_height="wrap_content">
             
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="100sp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/name"
-                    android:text="NAMA COY"
+                    android:text="Anab Kocak"
                     android:layout_width="match_parent"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="27dp"
+                    android:layout_marginTop="15dp"
                     android:layout_height="30sp" />
 
                 <TextView
                     android:id="@+id/job"
-                    android:text="insert job here"
+                    android:text="Tukang Kunci"
+                    android:textColor="#000000"
                     android:layout_width="match_parent"
+                    android:textSize="15dp"
+                    android:layout_marginTop="5sp"
                     android:layout_height="20sp" />
 
                 <TextView
                     android:id="@+id/quote"
-                    android:text="insert quote here"
+                    android:text="Selamat dunia akhirat, punya istri cantik, anak soleh dan soleha. Punya uang banyak dan dapat pekerjaan layak."
                     android:layout_width="match_parent"
-                    android:layout_height="50sp" />
+                    android:textColor="#000000"
+                    android:textSize="12dp"
+                    android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10sp">
 
-                <Button
-                    android:id="@+id/followers"
+                <com.dd.CircularProgressButton
+                    android:id="@+id/followingButton"
+                    android:textSize="12dp"
+                    app:cpb_cornerRadius="8dp"
+                    app:cpb_textComplete="Complete"
+                    app:cpb_textError="Error"
+                    app:cpb_textIdle="100k following"
+                    android:background="@color/colorAccent"
+                    app:cpb_selectorIdle="@drawable/login_button"
+                    android:padding="10sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textAllCaps="false"
+                    android:layout_height="35dp" />
 
-                <Button
-                    android:id="@+id/following"
+                <com.dd.CircularProgressButton
+                    android:id="@+id/followersButton"
+                    android:textSize="12dp"
+                    app:cpb_cornerRadius="8dp"
+                    app:cpb_textComplete="Complete"
+                    app:cpb_textError="Error"
+                    app:cpb_textIdle="8888 followers"
+                    app:cpb_selectorIdle="@drawable/login_button"
+                    android:padding="10sp"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="15sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="35dp" />
 
 
             </LinearLayout>
@@ -81,22 +112,59 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:weightSum="2"
+                android:layout_marginTop="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/checkedPostButton"
-                    android:text="Checked article(s)"
-                    android:layout_weight="1"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/contributedPostButton"
-                    android:text="Article(s) cotributed into"
+                    android:orientation="vertical"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:background="@color/colorPrimary"
                     android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/checkedPostButton"
+                        android:text="3324"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="15sp"
+                        android:text="article(s) checked"/>
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:orientation="vertical"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
+                    android:background="@color/colorAccent"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/contributedPostButton"
+                        android:text="1000"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textColor="@color/white"
+                        android:textAlignment="center"
+                        android:textSize="15sp"
+                        android:paddingBottom="5sp"
+                        android:text="article(s) contributed info"/>
+                </LinearLayout>
 
             </LinearLayout>
 
