--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -137,6 +137,33 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="20sp"
+                        android:layout_height="20sp"
+                        android:src="@drawable/briefcase_logo"
+                        android:tint="@color/cpb_white"
+                        android:layout_marginRight="5sp"
+                        android:layout_marginTop="5sp"/>
+
+                    <EditText
+                        android:id="@+id/changeJobEditText"
+                        android:layout_width="250sp"
+                        android:layout_height="wrap_content"
+                        android:hint="Job"
+                        android:textColor="#ffebee"
+                        android:textColorHint="#ffebee"
+                        android:ems="10"
+                        android:maxLines="1"
+                        android:textSize="15sp"
+                        android:lines="1"
+                        android:singleLine="true" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp">
 
