--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,16 +37,16 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="27dp"
                     android:layout_marginTop="15dp"
-                    android:layout_height="30sp" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/job"
                     android:text="Tukang Kunci"
                     android:textColor="#000000"
                     android:layout_width="match_parent"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
                     android:layout_marginTop="5sp"
-                    android:layout_height="20sp" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/quote"
