--- a/app/src/main/res/layout/comment_card_view.xml
+++ b/app/src/main/res/layout/comment_card_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="2sp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/commentCard"
@@ -11,17 +12,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="3">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/postedUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20sp"
-                android:text="comments"/>
+                android:layout_marginLeft="20sp"/>
 
-
+            <TextView
+                android:id="@+id/postContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20sp"/>
 
         </LinearLayout>
 
