--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,19 +11,27 @@
         android:weightSum="3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/profilePicture"
-            android:paddingTop="12sp"
-            android:layout_weight="2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/default_profpic"/>
+            android:layout_weight="0"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:layout_centerHorizontal="true"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="5"
+            app:civ_shadow_color="@color/colorAccent"
+            android:src="@drawable/default_profpic"
+            android:layout_marginTop="30sp"
+            android:layout_marginLeft="10sp"/>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingLeft="20sp"
+            android:paddingRight="20sp">
             
             <LinearLayout
                 android:orientation="vertical"
@@ -63,18 +71,18 @@
                 android:layout_marginTop="10sp">
 
                 <com.dd.CircularProgressButton
-                    android:id="@+id/followingButton"
+                    android:id="@+id/followingsButton"
                     android:textSize="12dp"
                     app:cpb_cornerRadius="8dp"
                     app:cpb_textComplete="Complete"
                     app:cpb_textError="Error"
-                    app:cpb_textIdle="100k following"
                     android:background="@color/colorAccent"
                     app:cpb_selectorIdle="@drawable/login_button"
                     android:padding="10sp"
                     android:layout_width="wrap_content"
                     android:textAllCaps="false"
-                    android:layout_height="35dp" />
+                    android:layout_height="35dp"
+                    android:textColor="@color/white"/>
 
                 <com.dd.CircularProgressButton
                     android:id="@+id/followersButton"
@@ -82,13 +90,13 @@
                     app:cpb_cornerRadius="8dp"
                     app:cpb_textComplete="Complete"
                     app:cpb_textError="Error"
-                    app:cpb_textIdle="8888 followers"
                     app:cpb_selectorIdle="@drawable/login_button"
                     android:padding="10sp"
                     android:textAllCaps="false"
                     android:layout_marginLeft="15sp"
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp" />
+                    android:layout_height="35dp"
+                    android:textColor="@color/white"/>
 
 
             </LinearLayout>
@@ -117,13 +125,15 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/checkedPostLayout"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
                     android:background="@color/colorPrimary"
                     android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:clickable="true">
                     <TextView
                         android:id="@+id/checkedPostButton"
                         android:text="3324"
@@ -141,13 +151,15 @@
                         android:text="article(s) checked"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:id="@+id/contributedPostLayout"
                     android:layout_width="match_parent"
                     android:orientation="vertical"
                     android:paddingTop="12dp"
                     android:paddingBottom="12dp"
                     android:background="@color/colorAccent"
                     android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:clickable="true">
                     <TextView
                         android:id="@+id/contributedPostButton"
                         android:text="1000"
