--- a/app/src/main/res/layout/layout_list_feed.xml
+++ b/app/src/main/res/layout/layout_list_feed.xml
@@ -15,14 +15,20 @@
         android:orientation="horizontal">
 
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/imagePostStarter"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="30sp"
-            android:layout_marginTop="25sp"
-            android:src="@drawable/user_login_24"
-            />
+            android:layout_weight="0"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            app:civ_border_color="@color/colorAccent"
+            app:civ_border_width="1dp"
+            app:civ_shadow="true"
+            app:civ_shadow_radius="5"
+            app:civ_shadow_color="@color/colorAccent"
+            android:src="@drawable/default_profpic"
+            android:layout_marginTop="15sp"
+            android:layout_marginLeft="10sp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +38,7 @@
                 android:id="@+id/titlePost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="15sp"
                 android:layout_marginLeft="30sp"
                 android:textSize="17sp"
                 android:textStyle="bold"
@@ -50,14 +56,20 @@
                     />
                 <TextView
                     android:id="@+id/postStarter"
-                    android:layout_width="75dp"
-                    android:layout_height="30dp"
-                    android:textColor="@color/cpb_red"
-                    />
-                <TextView
-                    android:id="@+id/datePosted"
                     android:layout_width="100dp"
                     android:layout_height="30dp"
+                    android:textColor="@color/colorPrimary"
+                    />
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/access_time_logo"/>
+                <TextView
+                    android:id="@+id/datePosted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginLeft="5sp"
                     />
             </LinearLayout>
         </LinearLayout>
@@ -74,8 +86,9 @@
 
         <ImageView
             android:id="@+id/postImage"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxHeight="200sp"
             android:layout_marginTop="10sp"
             android:layout_marginLeft="30sp"
             android:layout_marginRight="30sp"/>
@@ -86,6 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30sp"
             android:layout_marginRight="30sp"
+            android:textColor="@color/black_overlay"
             android:maxLines="2"/>
     </LinearLayout>
 
